--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,14 +5,16 @@ stages:
 test:
     image: node:17-alpine
     stage: test
-    tags: test
+    tags: 
+        - test
     script:
         - npm test
 
 build:
     image: node:17-alpine
     stage: build
-    tags: build
+    tags:
+        - build
     script:
         - docker compose up
 
