doda skriptu za skinit dokcer

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,5 +17,8 @@ build:
     tags:
         - build
     script:
+        - sudo dnf config-manager --add-repo https://download.docker.com/linux/centos/docker-ce.repo
+        - sudo dnf -y install docker-ce docker-ce-cli containerd.io docker-compose-plugin
+        - sudo systemctl --now enable docker
         - docker compose up
 
