--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,13 +12,10 @@ test:
         - npm test
 
 build:
-    image: node:17-alpine
+    image: nginx:latest
     stage: build
     tags:
         - build
     script:
-        - sudo dnf config-manager --add-repo https://download.docker.com/linux/centos/docker-ce.repo
-        - sudo dnf -y install docker-ce docker-ce-cli containerd.io docker-compose-plugin
-        - sudo systemctl --now enable docker
         - docker compose up
 
