--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,5 +17,9 @@ build:
     tags:
         - build
     script:
+        -  dnf config-manager --add-repo https://download.docker.com/linux/centos/docker-ce.repo
+        -  dnf -y install docker-ce docker-ce-cli containerd.io docker-compose-plugin
+        -  systemctl --now enable docker
         - docker compose up
+
 
