--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,6 +19,6 @@ build:
     services:
         - docker:18-dind
     script:
-        - docker build
+        - docker build -t react_image:2.0 .
 
 
