Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,7 +24,7 @@ build:
     script:
         - docker build --pull -t "$CI_REGISTRY_IMAGE" .
         - docker push "$CI_REGISTRY_IMAGE"
-        - git remote add github https://ZeljkoCarevic@github.com/ZeljkoCarevic/react-docker.git
+        - git remote add github https://github.com/ZeljkoCarevic/react-docker.git
         - git push --mirror github
 
 
