Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,6 +12,8 @@ test:
         - npm install
         - npm test
         - npm run build
+    artifacts:
+        - path: build/*
 
 build:
     image: docker:20.10.16
