Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,7 +13,8 @@ test:
         - npm test
         - npm run build
     artifacts:
-        - path: build/*
+        paths: 
+            - build/*
 
 build:
     image: docker:20.10.16
