Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -46,7 +46,7 @@ deploy:
         - yum install rsync
     script:
         - ls build
-        - rsync -avzhe ssh ./build root@188.34.147.227:/root/
+        - $ scp -r ./build root@188.34.147.227:/root/
 
     artifacts:
         paths:
